# mini-rust-test-league-discord-status

./: Cargo.toml  README.md
src/: events.rs  main.rs  set_activity.rs  structs.rs
